Publish page: Fix song_cover.src and wrap overflow

--- a/public/stylesheets/publish/style.css
+++ b/public/stylesheets/publish/style.css
@@ -21,7 +21,7 @@ html, body {
   display: block;
   position: relative;
   justify-content: space-between;
-  height: 100%; }
+  min-height: 100%; }
   .content_wrap .publish_wrap {
     z-index: 10;
     width: 300px;
